	* added bookmarks to wvParseStruct
	* wmf files are decompressed and extracted correctly
	* unicode in fields is support ok now again.
	* field thing split into two parts, the command part and
	the "argument", or last outputted text from the field part.
	this allow hyperlinked fields to do the right thing, and for
	unrecognized fields to output their original default contents.
ALL TODO

	* allow latex or html or raw text conversion options.

	* more graphic checks, more escher records etc etc.
	* promote old graphics into escher format.
	* decompress wmf etc.
	* get libwmf back into action and get picts together as well.

	* wvSetCharHandler(proc,NATIVE|UNICODE)
	* attempt to remove completely empty para's with the IsEmpty code

	* Got to think of some way to keep the list stuff in sync with the margins 
	of the enclosed paragraphs in html output.

	* need to add a color Auto thing that figures out what color goes against 
	what fore or back ground.

	* put the default text and char stuff into one single "style", and then 
	try and figure out a way to save arbitrary no of styles into some nice 
	structure for later seaching and stylesheet implementation.

	* style overrides for each word style, example idea in wvHtml.xml

	* comment/footnote and endnote support.

	* fully implement tablelooks, the flags in particular, and maybe the 
	colors for the bg should be farmed out to sperate config options rather
	than piggy backing on the other colors, also why did one of the text
	foregrounds not work on its own, while the others did, and is there
	one of two cases where our grid will not handle every case ?

	* add another option for table width, i.e. tableabswidth.
	* we need character formatting for the <li> itself, we can do this I 
	suppose, but i'll hold off on that for a while.

	* fontface and size for char runs..

	* what about a collision between underline and revision added ? and also 
	the strike and revision deleted ?, what if a mad user created his own 